agregué componente mainarticle

--- a/src/texto-borrar.html
+++ b/src/texto-borrar.html
@@ -8,7 +8,7 @@
   
   <title>Frontend Mentor | News homepage</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!-- Feel free to remove these styles or customize in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -16,18 +16,18 @@
 </head>
 <body>
 
-  Home
+  <!-- Home
   New
   Popular
   Trending
-  Categories
+  Categories -->
 
-  The Bright Future of Web 3.0?
+  <!-- The Bright Future of Web 3.0?
 
   We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
   But is it really fulfilling its promise?
 
-  Read more
+  Read more -->
 
   New 
 
