--- a/src/texto-borrar.html
+++ b/src/texto-borrar.html
@@ -29,7 +29,7 @@
 
   Read more -->
 
-  New 
+  <!-- New 
 
   Hydrogen VS Electric Cars
   Will hydrogen-fueled cars ever catch up to EVs?
@@ -38,9 +38,9 @@
   What are the possible adverse effects of on-demand AI image generation?
 
   Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
+  Private funding by VC firms is down 50% YOY. We take a look at what that means. -->
 
-  01
+  <!-- 01
   Reviving Retro PCs
   What happens when old PCs are given modern upgrades?
 
@@ -50,7 +50,7 @@
 
   03
   The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
+  How the pandemic has sparked fresh opportunities. -->
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
